test-suite/test2/compilation.check
----------
1. ERROR in ./test2/src/Test1.java (at line 2)
	sdf
	^^^
Syntax error on token "sdf", delete this token
----------
1 problem (1 error)